--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,6 @@ jobs:
       - name: ⬆️ Commit and Push Updated M3U
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          file_pattern: MIN.m3u MIN.txt
+          file_pattern: MIN.txt
+          #file_pattern: MIN.m3u MIN.txt
           commit_message: "Auto Update in ${{ env.DATE }}!✨MIN✨!"
